--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,15 @@
   --ff-serif: 'Fraunces', serif;
 }
 
+/*
 @media (min-width: 35em) {
   :root {
-      /* font-sizes*/
       --fs-300: 2.8rem;
       --fs-200: 1.5rem;
       --fs-100: 1.1rem;
   }
 }
+*/
 
 /* ------------------------ */
 /* Reset                    */
@@ -243,23 +244,15 @@ select{
     width: 50%;
     height: 100%;
     margin: 0;
-    padding: 2.5rem;
+    padding: 1.5rem;
     justify-content: space-evenly;
   }
 
-  .card__content h2 {
-      margin-bottom: 5px;
-  }
-
   .description {
-    margin: 15px 15px 20px 0;
+    margin: 0 15px 0 0;
   }
 
   .button-cart{
     align-self: center;
-  }
-
-  .button-cart img {
-    margin-right: 15px;
   }
 }
